[eBPF] usdt test

--- a/agent/src/ebpf/Makefile
+++ b/agent/src/ebpf/Makefile
@@ -119,7 +119,7 @@ CFLAGS += $(JAVA_AGENT_MACROS)
 #  where the error occurred.
 # -DDF_MEM_DEBUG Used for memory leak detection, to check for memory
 #  leak issues during the debugging phase.
-CFLAGS += $(MACHINE_CFLAGS) -fno-omit-frame-pointer -I/usr/lib/jvm/java/include -I/usr/lib/jvm/java/include/linux -I.
+CFLAGS += -DBPF_DEBUG $(MACHINE_CFLAGS) -fno-omit-frame-pointer -I/usr/lib/jvm/java/include -I/usr/lib/jvm/java/include/linux -I.
 ifeq ($(findstring musl,$(CC)),musl)
     IS_MUSL := 1
     ifeq ($(findstring aarch64,$(ARCH)),aarch64)
@@ -144,9 +144,9 @@ $(ELFFILES): tools/bintobuffer
         fi
 	@rm -rf data
 	$(call compile_socket_trace_elf, common)
-	$(call compile_socket_trace_elf, 3_10_0, LINUX_VER_3_10_0=1)
-	$(call compile_socket_trace_elf, 5_2_plus, LINUX_VER_5_2_PLUS=1)
-	$(call compile_socket_trace_elf, kylin, LINUX_VER_KYLIN=1)
+#	$(call compile_socket_trace_elf, 3_10_0, LINUX_VER_3_10_0=1)
+#	$(call compile_socket_trace_elf, 5_2_plus, LINUX_VER_5_2_PLUS=1)
+#	$(call compile_socket_trace_elf, kylin, LINUX_VER_KYLIN=1)
 	$(call compile_perf_profiler_elf, common)
 	@touch $(ELFFILES)
 
