[AGENT] agent debug

--- a/agent/docker/dockerfile
+++ b/agent/docker/dockerfile
@@ -16,6 +16,7 @@ RUN --mount=target=/tmp-mount \
     tzdata \
     iproute2 \
     bridge-utils \
+    valgrind \
     busybox && \
     /bin/cp /usr/share/zoneinfo/${DEFAULT_TZ} /etc/localtime && \
     AGENT_BUILD_ARCH=$(echo ${TARGETARCH}|sed 's|amd64|x86_64|'|sed 's|arm64|aarch64|') && \
