[eBPF] memcheck thread display meminfo

--- a/agent/src/ebpf/Makefile
+++ b/agent/src/ebpf/Makefile
@@ -144,10 +144,10 @@ $(ELFFILES): tools/bintobuffer
                 echo "  check llvm-clang fail. expect Clang/LLVM 10+" && exit 1; \
         fi
 	@rm -rf data
-	$(call compile_socket_trace_elf, common)
-	$(call compile_socket_trace_elf, 3_10_0, LINUX_VER_3_10_0=1)
-	$(call compile_socket_trace_elf, 5_2_plus, LINUX_VER_5_2_PLUS=1)
-	$(call compile_socket_trace_elf, kylin, LINUX_VER_KYLIN=1)
+#	$(call compile_socket_trace_elf, common)
+#	$(call compile_socket_trace_elf, 3_10_0, LINUX_VER_3_10_0=1)
+#	$(call compile_socket_trace_elf, 5_2_plus, LINUX_VER_5_2_PLUS=1)
+#	$(call compile_socket_trace_elf, kylin, LINUX_VER_KYLIN=1)
 	$(call compile_perf_profiler_elf, common)
 	@touch $(ELFFILES)
 
